@@ -1,8 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX adchpp-lan-2.8.0-fix_config_paths.patch 4034 SHA256 7a112f77e3d995a102703b85230610643f69cd4f99b35fcb22c3edc7c5e7a85b SHA512 02f7cff3a78d5dfc3025dc3ba6ab9afdf249af8db2e92083f2155f15774c39b5c04660f8215973c5060e42ba4e498ca6f90b33f3ad8d46d8241e4d244be80895 WHIRLPOOL bcdd543345eafa624494410771f299e3c794d423655e19220974700ce6b322bd99e723d8d94c7410a4769aa214c3b74e61bc91ed2ecd49d285f1a7d67ad39fb5
 AUX adchpp-lan-2.9.0-fix_cflags.patch 2402 SHA256 c0b8b3c47fd2cc64b56f0b6c1c4e4869649b91e0469768215f47bca528beec8c SHA512 3c167213ab72dfd945e6729056dac68614528e09810e1a2054bd780e74b64450d44f9fdf37e66fafb9e172ecf3045ef8ad2fe599d4227fce4ed71d813b4e74d0 WHIRLPOOL fe896d916bcf3979bf0cfbb09c927f0628f97dc308a63210164b4107d0b38613e569b6fa8d46aa11f0c4ef4e248bbe4edca562b32dfc3ffe543895028353a952
 AUX adchpp-lan.conf.d 408 SHA256 b1988c06279014462391d27c3ab6e6ca07e7204f54544160e949808d60b78e3a SHA512 c14fa6b3cd9c64610a8fb5057c98126f38401b18239d78268a4c7e9c6e74fa33ed7a7feb19fbb9f1b1e9b84b31c01d30d1cfce8a9b22dc0b5fe6182a284fbacc WHIRLPOOL 9f8489265e6fa039f038ec5a1c89c935dfab50870ef2d586b464ea6b70b21fa810f2052cf43dba9e10e5272d3ba8b3dc1f4a18ac747fb77a7c1facbaf6dd3ed0
 AUX adchpp-lan.init.d 568 SHA256 37a7ee707036e17c7990cd418d1173464fe97960a6be21f5bed5c1b09280d7d2 SHA512 38c809e58da0e9ca51f135c34f80fa9a376c025253e07fd59dd7d9d4fb816907fa21013b5217ee00dabd3e21e4af8c8b865e3d0b56828db454b26e4e4893d7c0 WHIRLPOOL 6b592940bd70058fe0226a09cbbc4bb9bfad68911f9723f92365cdb11e332aa24683b392d057168e0a08f5b79c7bc4bac8fdd1ae485a6a523a45da2970b3e94e
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
-EBUILD adchpp-lan-9999.ebuild 4401 SHA256 8995db59534a8a7b2a9b1fc8171458770f6a1e4081703ce4bfa613a3bcbbc93e SHA512 5b786827e40459a355f77f8a80906ba02e19c55cbed31f4e16bc690836b9244c32481f81b68aebf65d4db20cfefc0489639d8b61349a3898644fb22981afe27b WHIRLPOOL 25f37c78453a5cec5eec1a725ab5bd7de18c64093939b0648a5032243df1119f64a9e8f21717454fc4532f90bc6b95301e48164d26ed8bd8b92680d5892fbf25
-MISC ChangeLog 1193 SHA256 45de7028c269b53b72ab2c0f0bb8d5ced3f501f251dda69f4dd8d7ab44be9d23 SHA512 cb68a3fb51fa96657b355db50908f4039797b30a49139b1f9ed949948cf3e5a25f4d44bac52b54428fdd06f2d56afa5a884e2e745197191c2a49205f976f7309 WHIRLPOOL c6b5939bdce29fe9851fe3a955a4b73548574f6648c5228a8b596966466ea5a8094301f8c05c763b99069d6cc227933a2a1177fc68b466206f270d613fd7676b
+EBUILD adchpp-lan-9999.ebuild 4437 SHA256 62ebc371e4deb13a217ded2f5387e0847deaae02e1d5c5afdf89ba731625c76d SHA512 ecca9db545b8e000a7964ee311737e71679e464c724f6b6badb25d861c6b0b7dc3f6d8c556577f7d70cc938e4f23923bc066d9a53d34f0ab727fe127c47face5 WHIRLPOOL e65587b1941d02268df7bfc24981b2815a862f26575eaf50eb7fde49b01b41cc0f8e39d3e8499634ba2101653d3370e90e2f4f0dc9be460e5b2e251d148201ed
+MISC ChangeLog 1305 SHA256 b9cd3cbc2e0e14e028124c326139f2196e60daaf6f0c3c1a8aef7abcbfc5f3c6 SHA512 3954d4df32cc5eb85c34415e389d927640c22c7fd0020ebc86db18f1d9beb8bc285057d22d55697a0879e83f2703f1a14fde73f4922b9598f08f849045a60ab8 WHIRLPOOL a3ac33941ba9cc6abe07c3c81c7993c2f001b14300c0357d20232a9a54df7d4670bd44ea300c4059f7c0d274f013d59fa86d06fca3bf70f146dd9315a793e4bd
 MISC metadata.xml 644 SHA256 a850bd20d7c3201bc1fb65ed02167dde40a4ed8cc15d4722ac03d632a0d222aa SHA512 b9266a517faf5fa7ae627c9f9ffdac3b6e067a429b5129fe1d750ce7d8f2fb5b41aa1f663bfedd411974b17ec82f83e8a15a92b4cdfebf82fd0d9248ff2ea5fe WHIRLPOOL fec9e7f00c88b571e43739c8aebff03d97d3aedc888355005809c68ae79de60642db489b93a7470b72064ac5aa74bd0fd70897d6a54b48f64be0c9cb1b68bce9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJUSUOwAAoJEKXBodJLEo5SJs4H/3V1Z6flC4juOrP8r0KYNCIF
+42dKP5cyzxd4cmsc8Nbwf3R5YYY2aqumanFmKH7sKq9BzQURQx/zE2NBtZcwJ9MV
+vRqECzMM9jmzbM6w6OMcTc34dBV81IDaFKaaHhiMqMh8v9fATch1QEzguaPGWj9i
+Cs3TGPB4L3QVCiRMiCKq4wyQdIWZpSPNQmipMwIYGv9NSMbf8fUamEq7qtb+7/Ku
+3cagQLx96x/yGF7eHzIjPFS3GoE1R1qDwAbzOA41T5aUO/+C4RBL+jpE8Is2LhA/
+0SFgS0SIddDvhMhwe6//IDPHe+OFgfakyFyTB0ysYuUFi0rIaszO1zFC9DCY8nQ=
+=yDz9
+-----END PGP SIGNATURE-----
